Added database file structure and mongoose to the dependencies

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <title>Vue/Express/MongoDb Project</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app">Vue is not yet working but the server is!</div>
   <script src="/dist/index.js"></script>
 </body>
 </html>
