--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <div id="app">Vue is not yet working but the server is!</div>
-  <script src="/dist/index.js"></script>
+  <script src="./bundle.js"></script>
 </body>
 </html>
